--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,14 +44,7 @@
             margin-right: auto;
         }
 
-        .myform input {
-            width: 100%;
 
-        }
-
-        .myform label {
-            width: 100%;
-        }
 
         .regiForm {
             margin-top: 100px;
@@ -80,40 +73,106 @@
                             </div>
                             <h4 class="text-center text-primary mt-3">Registration Form</h4>
                             <div class="form-group p-1  mt-4 ml-5 mr-5">
-                                <label for="name"><b>Name</b></label>
+                                <label for="name"><b>Name <span style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Name" name="name" id="name"
                                     required>
                             </div>
 
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="email"><b>Email Id</b></label>
+                                <label for="email"><b>Email Id <span style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Enter Email" name="email"
                                     id="email" required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="mobile"><b>Mobile Number</b></label>
+                                <label for="mobile"><b>Mobile Number <span style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Mobile Number" name="mobile"
                                     id="mobile" required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="aadhar"><b>Aadhar Card</b></label>
+                                <label for="state"><b>State <span style="color: red;">*</span></b></label>
+                                <input type="text" class="form-control" placeholder="State" name="state" id="state"
+                                    required>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <label for="city"><b>City <span style="color: red;">*</span></b></label>
+                                <input type="text" class="form-control" placeholder="City" name="city" id="city"
+                                    required>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <label for="date"><b>Preferrabal Date <span style="color: red;">*</span></b></label>
+                                <input type="date" class="form-control" min="2021-04-01" max="2021-04-30"
+                                    placeholder="Enter Preferrable Date" name="date" id="date" required>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <label for="" class="w-10 pl-2"><b>Select state</b> </label>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" onclick="allfun()" class="w-10" name="all" id=""><label for=""
+                                    class="w-10 pl-2"><b>All</b> </label>
+                            </div>
+
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10" name="jammukashmir" id=""><label for=""
+                                    class="w-10 pl-2"><b>Jammu and Kashmir</b> </label>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5 w-25">
+                                <input type="checkbox" class="w-10" name="panjab" id=""><label for=""
+                                    class="w-10 pl-2"><b>panjab</b> </label>
+
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10 " name="rajastan" id=""><label for=""
+                                    class="w-10 pl-2 "><b>Rajastan</b> </label>
+                            </div>
+
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10 " name="gujarat" id=""><label for=""
+                                    class="w-10 pl-2 "><b>Gujarat</b> </label>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10 " name="maharashtra" id=""><label for=""
+                                    class="w-10 pl-2 "><b>Maharashtra</b> </label>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10 " name="goa" id=""><label for=""
+                                    class="w-10 pl-2 "><b>Goa</b> </label>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10 " name="karnakata" id=""><label for=""
+                                    class="w-10 pl-2 "><b>Karnataka</b> </label>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10 " name="kerala" id=""><label for=""
+                                    class="w-10 pl-2 "><b>Kerela</b> </label>
+                            </div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <input type="checkbox" class="w-10 " name="tamilnadu" id=""><label for=""
+                                    class="w-10 pl-2 "><b>Tamil Nadu</b> </label>
+                            </div>
+
+
+
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <label for="aadhar"><b>Aadhar Card <span style="color: red;">*</span></b></label>
                                 <input type="number" class="form-control" placeholder="Aadhar Number" name="aadhar"
                                     id="aadhar" required>
 
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
                                 <label for="bike"><b>Motorcycle planning to take along with you on the K2K
-                                        ride</b></label>
+                                        ride <span style="color: red;">*</span></b></label>
                                 <input type="text" placeholder="Bike Name" class="form-control" name="bike" id="bike"
                                     required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="bikeNumber"><b>Registered motorcycle number</b></label>
+                                <label for="bikeNumber"><b>Registered motorcycle number <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" placeholder="Bike number" name="bikeNumber" class="form-control"
                                     id="bikeNumber" required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="fb"><b>Facebook profile/page link</b></label>
+                                <label for="fb"><b>Facebook profile/page link <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Facebook Link" name="fb" id="fb"
                                     required>
                             </div>
@@ -132,48 +191,56 @@
                                 <input type="text" class="form-control" placeholder="Portfolio" name="vlog" id="vlog">
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="groups"><b>Motorcycle(s) you ride</b></label>
+                                <label for="groups"><b>Motorcycle(s) you ride <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" placeholder="Bike Name" class="form-control" name="groups"
                                     id="groups" required>
                             </div>
-                            <div class="form-group p-1 ml-5 mr-5">
-                                <label for="mean"><b>What does Motorcycle mean to you?</b></label>
+                            <div class="form-group p-1 ml-5 mr-5 ">
+                                <label for="mean"><b>What does Motorcycle mean to you? <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Motorcycle means to you..."
                                     name="mean" id="mean" required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="experience"><b>Riding experience/background (if any)</b></label>
+                                <label for="experience"><b>Riding experience/background (if any) <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Experience" name="experience"
                                     id="experience" required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="group"><b>Belong to any riding group?</b></label>
+                                <label for="group"><b>Belong to any riding group? <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" placeholder="Group" class="form-control" name="group" id="group"
                                     required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="km"><b>Maximum km's you've covered in one go</b></label>
+                                <label for="km"><b>Maximum km's you've covered in one go <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="number" placeholder="In KM" name="km" id="km" class="form-control"
                                     required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="km1"><b>Maximum km's you can ride</b></label>
+                                <label for="km1"><b>Maximum km's you can ride <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="number" placeholder="In KM" name="km1" id="km1" class="form-control"
                                     required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="about"><b>What do you think about the K2K ride?</b></label>
+                                <label for="about"><b>What do you think about the K2K ride? <span
+                                            style="color: red;">*</span></b></label>
                                 <input class="form-control" type="text" placeholder="About K2K" name="about" id="about"
                                     required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
                                 <label for="time"><b>How early can you wake up for a motorcycle ride? (In
-                                        AM)</b></label>
+                                        AM) <span style="color: red;">*</span></b></label>
                                 <input type="time" class="form-control" placeholder="Time" name="bike_2" id="bike_2"
                                     required>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="hours"><b>Total number of hours for a motorcycle ride in a day?</b></label>
+                                <label for="hours"><b>Total number of hours for a motorcycle ride in a day? <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="number" class="form-control" placeholder="Hour" name="hour" id="hour"
                                     required>
                             </div>
@@ -204,7 +271,8 @@
                                 </select>
                             </div>
                             <div class="form-group p-1 ml-5 mr-5">
-                                <label for="know"><b>How do you came to know about the K2K ride?</b></label>
+                                <label for="know"><b>How do you came to know about the K2K ride? <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Source" name="know" id="know"
                                     required>
 
@@ -229,16 +297,25 @@
                                 </select>
                             </div>
                             <div class="form-group ml-5 mr-5">
-                                <label for="riding"><b>What does riding means to you?</b></label>
+                                <label for="riding"><b>What does riding means to you? <span
+                                            style="color: red;">*</span></b></label>
                                 <input type="text" class="form-control" placeholder="Riding means to you..."
                                     name="riding" id="riding" required>
                             </div>
-                            <div class="form-group"></div>
-                            <div class="form-group"></div>
+                            <div class="form-group p-1 ml-5 mr-5">
+                                <label for="hours">All field maked as ( <span style="color: red;">*</span> ) are
+                                    mandatory</label>
+
+                            </div>
                             <hr>
-                            <button type="submit" data-toggle="modal" data-target="#exampleModalCenter"
-                                class="registerbtn btn btn-primary  mb-5 ml-5 mr-3"
-                                >Submit & Pay</button>
+                            <div class="form-group p-1 ml-5 mr-5 justify-content-center">
+                                <button type="submit" data-toggle="modal" data-target="#exampleModalCenter"
+                                    class="registerbtn btn btn-primary w-100 ">Submit
+                                    &
+                                    Pay</button>
+
+                            </div>
+
 
 
                         </div>
@@ -258,6 +335,15 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
                 integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
                 crossorigin="anonymous"></script>
+            <script>
+                function allfun() {
+                    var inputs = document.querySelectorAll("input[type='checkbox']");
+                    for (var i = 0; i < inputs.length; i++) {
+                        inputs[i].checked = true;
+                    }
+                }
+
+            </script>
 </body>
 
 </html>
