feedback api created

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -47,7 +47,8 @@
 
                 <ul class=" list-unstyled" style="font-size: 12px;">
                     <li class=" p-1 text-left">
-                        <a href="#!" class="text-dark" style="font-size: 10px;"> <i class="fas fa-envelope"></i> info@hasghtagplanners.in</a>
+                        <a href="#!" class="text-dark" style="font-size: 10px;"> <i class="fas fa-envelope"></i>
+                            info@hasghtagplanners.in</a>
                     </li>
                     <li class="p-1 text-left">
                         <a href="#!" class="text-dark"><i class="fab fa-whatsapp"></i>
@@ -55,9 +56,12 @@
                             +91 8588090209 </a>
                     </li>
                     <li class="p-1 text-left">
-                        <a href="https://www.youtube.com/channel/UCLJrU8DGBN69hVBCfjl0dJw" class="text-dark"><i class="fab fa-youtube"></i> </a>
-                        <a href="https://www.instagram.com/hashtagplannersindia/" class="text-dark"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/hashtagplannersIndia" class="text-dark"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.youtube.com/channel/UCLJrU8DGBN69hVBCfjl0dJw" class="text-dark"><i
+                                class="fab fa-youtube"></i> </a>
+                        <a href="https://www.instagram.com/hashtagplannersindia/" class="text-dark"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/hashtagplannersIndia" class="text-dark"><i
+                                class="fab fa-facebook"></i></a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +74,7 @@
         <div class="text-center p-3">
             <hr>
             © 2020 Copyright:
-            <a class="text-dark">hashtagtraker.com all rights are reserved </a>
+            <a class="text-dark">hashtagplanner all rights are reserved </a>
         </div>
         <!-- Copyright -->
     </footer>
